fix: align register steps list in center

--- a/static/style.css
+++ b/static/style.css
@@ -49,6 +49,7 @@ body {
 
 ol {
   list-style-position: inside;
+  padding: 0;
 }
 
 #nav-selector {
